# textfeats

./: .gitignore  CMakeLists.txt  ConfigProps.h  README.md  TextFeatExtractor.cc  TextFeatExtractor.h  githook-pre-commit  intimg.cc  intimg.h  log.cc  log.h  mem.cc  mem.h  morph.cc  morph.h  rawimg.cfg  se.cc  se.h  srt.cc  srt.h  textFeats-docker  textFeats.cc  textFeats.cc_old  textFeats.cfg  textFeatsPageParallel.inc.sh
docker/: Dockerfile
test/: raw_xml_extraction.cmake  test-image.r1_l1.pgm.md5  test-image.xml  test-image_out.xml
